--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: Welcome to Jay Cee's homepage
+description: Feel free to bookmark this to keep an eye on my project updates.
 theme: jekyll-theme-merlot
